--- a/gamma/pubspec.yaml
+++ b/gamma/pubspec.yaml
@@ -1,4 +1,4 @@
-name: beta
+name: gamma
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
-#1.0.0+1
+
 environment:
   sdk: ">=2.1.0 <3.0.0"
 
@@ -20,9 +20,6 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.16.0
-
-  
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
