--- a/gamma/pubspec.yaml
+++ b/gamma/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.16.0
+  sembast: ^1.15.1
+  path_provider: ^0.5.0+1
+  # Used for BLoC state management
+  flutter_bloc: ^0.9.1
+  equatable: ^0.2.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
