--- a/gamma/pubspec.yaml
+++ b/gamma/pubspec.yaml
@@ -20,11 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.16.0
-  sembast: ^1.15.1
-  path_provider: ^0.5.0+1
-  # Used for BLoC state management
-  flutter_bloc: ^0.9.1
-  equatable: ^0.2.3
+  path_provider: any
+  sqflite: any
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
